--- a/repo/tweaks@5174a483-c88d-4bf8-a95f-35cd330b76e2/client.css
+++ b/repo/tweaks@5174a483-c88d-4bf8-a95f-35cd330b76e2/client.css
@@ -5,57 +5,117 @@
  * (https://notion-enhancer.github.io/) under the MIT license
  */
 
-.tweak--snappy_transitions * {
-  animation-duration: 0s !important;
-  transition-duration: 0s !important;
-}
-.tweak--snappy_transitions .notion-selectable-halo {
-  opacity: 1 !important;
-}
-
-.tweak--hide_help .notion-help-button {
-  display: none !important;
-}
-
-.tweak--thicker_bold .notion-page-content span[style*='font-weight:600'] {
-  font-weight: 700 !important;
-}
-
-.tweak--spaced_lines .notion-page-content .notion-selectable.notion-text-block {
-  line-height: 1.65 !important;
-  margin-top: 0.75em !important;
-}
-
-.tweak--condensed_bullets .notion-selectable.notion-bulleted_list-block {
-  margin-top: -1.5px !important;
-  margin-bottom: -1.5px !important;
-}
-
-.tweak--responsive_breakpoint .notion-column_list-block [style='display: flex;'] > div {
+.enhancer--tweak-responsive_breakpoint
+  .notion-column_list-block
+  [style='display: flex;']
+  > div {
   width: 100% !important;
 }
-.tweak--responsive_breakpoint .notion-column_list-block [style='display: flex;'] {
+.enhancer--tweak-responsive_breakpoint .notion-column_list-block [style='display: flex;'] {
   flex-direction: column !important;
 }
-.tweak--responsive_breakpoint .notion-app-inner {
+.enhancer--tweak-responsive_breakpoint .notion-app-inner {
   --theme--page-width: 100%;
   --theme--page-padding: calc(48px + env(safe-area-inset-left));
 }
 
-.tweak--bracketed_links .notion-link-token span {
+.enhancer--tweak-normalise_table_scroll
+  .notion-page-content
+  .notion-collection_view-block[style*=' width'],
+.enhancer--tweak-normalise_table_scroll
+  .notion-page-content
+  .notion-collection_view-block[style^='width'] {
+  width: 100% !important;
+}
+.enhancer--tweak-normalise_table_scroll
+  .notion-page-content
+  .notion-collection_view-block
+  [style*='padding-left: 50px'],
+.enhancer--tweak-normalise_table_scroll
+  .notion-page-content
+  .notion-collection_view-block
+  [style*='padding-left: 96px'],
+.enhancer--tweak-normalise_table_scroll
+  .notion-page-content
+  .notion-collection_view-block
+  [style*='padding-left: 126px'] {
+  padding-left: 0 !important;
+}
+.enhancer--tweak-normalise_table_scroll
+  .notion-page-content
+  .notion-collection_view-block
+  [style*='padding-right: 50px'],
+.enhancer--tweak-normalise_table_scroll
+  .notion-page-content
+  .notion-collection_view-block
+  [style*='padding-right: 96px'],
+.enhancer--tweak-normalise_table_scroll
+  .notion-page-content
+  .notion-collection_view-block
+  [style*='padding-right: 126px'] {
+  padding-right: 0 !important;
+}
+.enhancer--tweak-normalise_table_scroll
+  .notion-page-content
+  .notion-collection_view-block
+  [style*='min-width: calc(100% - 192px);'],
+.enhancer--tweak-normalise_table_scroll
+  .notion-page-content
+  .notion-collection_view-block
+  [style*='min-width: 708px;'] {
+  min-width: 100% !important;
+}
+.enhancer--tweak-normalise_table_scroll
+  .notion-page-content
+  .notion-collection_view-block
+  > div {
+  padding: 0 1px;
+}
+
+.enhancer--tweak-snappy_transitions * {
+  animation-duration: 0s !important;
+  transition-duration: 0s !important;
+}
+.enhancer--tweak-snappy_transitions .notion-selectable-halo {
+  opacity: 1 !important;
+}
+
+.enhancer--tweak-hide_help .notion-help-button {
+  display: none !important;
+}
+
+.enhancer--tweak-hide_slash_for_commands [contenteditable]:empty:after {
+  content: ' ' !important;
+}
+
+.enhancer--tweak-thicker_bold .notion-page-content span[style*='font-weight:600'] {
+  font-weight: 700 !important;
+}
+
+.enhancer--tweak-spaced_lines .notion-page-content .notion-selectable.notion-text-block {
+  line-height: 1.65 !important;
+  margin-top: 0.75em !important;
+}
+
+.enhancer--tweak-condensed_bullets .notion-selectable.notion-bulleted_list-block {
+  margin-top: -1.5px !important;
+  margin-bottom: -1.5px !important;
+}
+
+.enhancer--tweak-bracketed_links .notion-link-token span {
   border-bottom: none !important;
 }
-.tweak--bracketed_links .notion-link-token:before {
+.enhancer--tweak-bracketed_links .notion-link-token:before {
   content: '[[';
   opacity: 0.7;
   transition: opacity 100ms ease-in;
 }
-.tweak--bracketed_links .notion-link-token:after {
+.enhancer--tweak-bracketed_links .notion-link-token:after {
   content: ']]';
   opacity: 0.7;
   transition: opacity 100ms ease-in;
 }
-.tweak--bracketed_links .notion-link-token:hover::before,
-.tweak--bracketed_links .notion-link-token:hover::after {
+.enhancer--tweak-bracketed_links .notion-link-token:hover::before,
+.enhancer--tweak-bracketed_links .notion-link-token:hover::after {
   opacity: 1;
 }
